--- a/css/style.css
+++ b/css/style.css
@@ -32,17 +32,23 @@ main {
 }
 main .box{
     width: calc(100% / 3);
-    padding: 20px;
+    padding: 15px;
 }
 
 main .box .content {
     background-color: white;
     color: grey;
     text-align: center;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
 }
+
 main .content img {
     display: block;
     width: 100%;
     margin-bottom: 10px;
+}
+
+main .content h2{
+    margin-bottom: 10px;
+    font-weight: lighter;
 }
